first deployable version

--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,11 @@
       </div>
 
       <div class="field">
+        <div class="label">Device ID</div>
+        <div class="value">{{ config.deviceID }}</div>
+      </div>
+
+      <div class="field">
         <div class="label">Active Address</div>
         <div class="value">{{ config.oldIP }}</div>
       </div>
